// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonHyperlink snapshot should match snapshot 1`] = `
<ButtonHyperlink>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-button-hyperlink-wrapper"
        data-disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        Hyperlink
      </button>
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot when disabled 1`] = `
<ButtonHyperlink
  disabled={true}
>
  <FocusRing
    disabled={true}
  >
    <FocusRing
      disabled={true}
      focusClass="md-focus-ring-wrapper-disabled"
      focusRingClass="md-focus-ring-wrapper-disabled"
    >
      <button
        className="md-button-hyperlink-wrapper"
        data-disabled={true}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        type="button"
      >
        Hyperlink
      </button>
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;

exports[`ButtonHyperlink snapshot should match snapshot with title 1`] = `
<ButtonHyperlink
  title="Example Text"
>
  <FocusRing>
    <FocusRing
      focusClass="md-focus-ring-wrapper children"
      focusRingClass="md-focus-ring-wrapper children"
    >
      <button
        className="md-button-hyperlink-wrapper"
        data-disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onDragStart={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchCancel={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        title="Example Text"
        type="button"
      />
    </FocusRing>
  </FocusRing>
</ButtonHyperlink>
`;
